feat: Add Button component using CLI and setup lib utils
- Used 'pnpm dlx @react-native-reusables/cli@latest add button' to add the Button component.
- Configured component and lib aliases ('@/components/ui', '~/lib').
- Created components.json.
- Created lib/utils.ts with the 'cn' utility function.
- Installed clsx and tailwind-merge dependencies.
- Added '~/lib/*' path alias to tsconfig.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"strict": true,
 		"moduleResolution": "bundler",
 		"paths": {
-			"@/*": ["./*"]
+			"@/*": ["./*"],
+			"~/lib/*": ["./lib/*"]
 		}
 	},
 	"include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
