--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.14",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
+    "clsx": "^2.1.1",
     "expo": "~52.0.43",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
@@ -30,6 +33,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
