--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,11 @@
 			"~/lib/*": ["./lib/*"]
 		}
 	},
-	"include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+	"include": [
+		"**/*.ts",
+		"**/*.tsx",
+		".expo/types/**/*.ts",
+		"expo-env.d.ts",
+		"types/**/*.ts"
+	]
 }
