fix(button): correct import path for TextClassContext
Corrected the import path for TextClassContext within the Button component
from '@/components/ui/ui/text' to '@/components/ui/text'.
This resolves the "Unable to resolve module" runtime error.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,23 @@
 {
-	"extends": "expo/tsconfig.base.json",
-	"compilerOptions": {
-		"strict": true,
-		"moduleResolution": "bundler",
-		"paths": {
-			"@/*": ["./*"],
-			"~/lib/*": ["./lib/*"]
-		}
-	},
-	"include": [
-		"**/*.ts",
-		"**/*.tsx",
-		".expo/types/**/*.ts",
-		"expo-env.d.ts",
-		"types/**/*.ts"
-	]
+  "extends": "expo/tsconfig.base.json",
+  "compilerOptions": {
+    "strict": true,
+    "moduleResolution": "bundler",
+    "paths": {
+      "@/*": [
+        "./*"
+      ],
+      "~/lib/*": [
+        "./lib/*"
+      ]
+    }
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "types/**/*.ts",
+    "nativewind-env.d.ts"
+  ]
 }
