--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.7",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.14",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
+    "ai": "^4.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.43",
+    "expo-blur": "^14.0.3",
+    "expo-env": "^1.1.1",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
@@ -43,6 +48,7 @@
     "@types/react": "~18.3.12",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.3.3"
   },
